--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PokeMatch</title>
     <link rel="stylesheet" href="/style.css" />
-    <script src="/script.js" />
+    <script src="/script.js" async></script>
   </head>
   <body>
     <div class="container">
@@ -18,5 +18,7 @@
         <!-- <p id="output"></p> -->
       </div>
     </div>
+
+    <!-- <script src="/script.js" /> -->
   </body>
 </html>
