Fourth commit, fonts fixed, stylized

--- a/index.html
+++ b/index.html
@@ -6,12 +6,71 @@
     <title>PokeMatch</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" async></script>
+    <link rel="icon" type="image/x-icon" href="/pokeball.png">
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>PokeMatch</h1>
-        <button onclick="resetGame()">Reset</button>
+        <h1 class="poketext">PokeMatch</h1>
+        <div class="flex"">
+          <div class="container">
+            <button onclick="resetGame()" style="height:40px">Reset</button>
+          </div>
+          <span class="label">Generation: </span>
+          <label class="label"
+            >One
+            <input type="checkbox" checked="checked" />
+            <span class="checkmark"></span>
+          </label>
+
+          <label class="label"
+            >Two
+            <input type="checkbox" checked="checked" />
+            <span class="checkmark"></span>
+          </label>
+
+          <label class="label"
+            >Three
+            <input type="checkbox" checked="checked" />
+            <span class="checkmark"></span>
+          </label>
+
+          <label class="label"
+            >Four
+            <input type="checkbox" checked="checked" />
+            <span class="checkmark"></span>
+          </label>
+
+          <label class="label"
+            >Five
+            <input type="checkbox" checked="checked" />
+            <span class="checkmark"></span>
+          </label>
+
+          <label class="label"
+            >Six
+            <input type="checkbox" checked="checked" />
+            <span class="checkmark"></span>
+          </label>
+
+          <label class="label"
+            >Seven
+            <input type="checkbox" checked="checked" />
+            <span class="checkmark"></span>
+          </label>
+
+          <label class="label"
+            >Eight
+            <input type="checkbox" checked="checked" />
+            <span class="checkmark"></span>
+          </label>
+
+          <label class="label"
+            >Nine
+            <input type="checkbox" checked="checked" />
+            <span class="checkmark"></span>
+          </label>
+        </div>
       </header>
 
       <div id="game">
