Fixing alert spacing and label spacing

--- a/index.html
+++ b/index.html
@@ -22,55 +22,55 @@
             </div>
             <span class="label">Generation: </span>
             <label class="label"
-              >One
+              >&nbsp;One
               <input type="checkbox" checked="checked" />
               <!-- <span class="checkmark"></span> -->
             </label>
   
             <label class="label"
-              >Two
+              >&nbsp;Two
               <input type="checkbox" checked="checked" />
               <!-- <span class="checkmark"></span> -->
             </label>
   
             <label class="label"
-              >Three
+              >&nbsp;Three
               <input type="checkbox" checked="checked" />
               <!-- <span class="checkmark"></span> -->
             </label>
   
             <label class="label"
-              >Four
+              >&nbsp;Four
               <input type="checkbox" checked="checked" />
               <!-- <span class="checkmark"></span> -->
             </label>
   
             <label class="label"
-              >Five
+              >&nbsp;Five
               <input type="checkbox" checked="checked" />
               <!-- <span class="checkmark"></span> -->
             </label>
   
             <label class="label"
-              >Six
+              >&nbsp;Six
               <input type="checkbox" checked="checked" />
               <!-- <span class="checkmark"></span> -->
             </label>
   
             <label class="label"
-              >Seven
+              >&nbsp;Seven
               <input type="checkbox" checked="checked" />
               <!-- <span class="checkmark"></span> -->
             </label>
   
             <label class="label"
-              >Eight
+              >&nbsp;Eight
               <input type="checkbox" checked="checked" />
               <!-- <span class="checkmark"></span> -->
             </label>
   
             <label class="label"
-              >Nine
+              >&nbsp;Nine
               <input type="checkbox" checked="checked" />
               <!-- <span class="checkmark"></span> -->
             </label>
