removing superfluous alert

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           </div>
         </div>
       <div id="alert" class="alert hidden">
-        <span id="closebtn" onclick="this.parentElement.classList.toggle('hidden');">&times;</span> 
-        <strong>Congratulations!</strong> Play again? <button type="button" class="text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900 font-sans" onclick="resetGame(); this.parentElement.classList.toggle('hidden');" style="height:40px">Reset</button>
+        <!-- <span id="closebtn" onclick="this.parentElement.classList.toggle('hidden');">&times;</span> 
+        <strong>Congratulations!</strong> Play again? <button type="button" class="text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900 font-sans" onclick="resetGame(); this.parentElement.classList.toggle('hidden');" style="height:40px">Reset</button> -->
       </div>
     </div>
 
